Deleting user form the datastore using Ajax

--- a/war/css/script.css
+++ b/war/css/script.css
@@ -1,4 +1,4 @@
-#nextButton,#backButton{
+#nextButton,#backButton,#editUserName{
 	display: none
 }
 
@@ -10,9 +10,10 @@ table {
 	width: 100%;
 	border-collapse: collapse;
 }
-#usertable{
+
+.usertable{
 	margin: auto;
-    width: 50%;
+    width: 75%;
     padding: 10px;
 }
 
